error.txt
npm run tauri dev

> voidesk@0.1.0 tauri
> tauri dev

     Running BeforeDevCommand (`npm run dev`)

> voidesk@0.1.0 dev
> vite


  VITE v6.4.1  ready in 860 ms

  ➜  Local:   http://localhost:1420/
  ➜  Network: use --host to expose
     Running DevCommand (`cargo  run --no-default-features --color always --`)
        Info Watching C:\Users\bijim\void-desk\src-tauri for changes...
   Compiling voidesk v0.1.0 (C:\Users\bijim\void-desk\src-tauri)
warning: unused import: `Session`                           
  --> src\sdk\mod.rs:10:19
   |
10 | pub use session::{Session, SessionStore};
   |                   ^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `streaming::StreamEvent`
  --> src\sdk\mod.rs:11:9
   |
11 | pub use streaming::StreamEvent;
   |         ^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `ToolExecutor` and `ToolRegistry`
  --> src\sdk\mod.rs:12:17
   |
12 | pub use tools::{ToolExecutor, ToolRegistry};
   |                 ^^^^^^^^^^^^  ^^^^^^^^^^^^

warning: unused imports: `ChatRequest`, `ChatResponse`, `ContentBlock`, `Message`, and `Tool`
  --> src\sdk\mod.rs:13:17
   |
13 | pub use types::{ChatRequest, ChatResponse, ContentBlock, Message, Tool};
   |                 ^^^^^^^^^^^  ^^^^^^^^^^^^  ^^^^^^^^^^^^  ^^^^^^^  ^^^^

warning: unused import: `mpsc`
 --> src\lsp\transport.rs:8:19
  |
8 | use tokio::sync::{mpsc, oneshot, Mutex};
  |                   ^^^^

warning: unused imports: `CompletionResponse`, `DidCloseTextDocumentParams`, `DidSaveTextDocumentParams`, `Hover`, `InitializeParams`, `InitializeResult`, `InitializedParams`, and `PublishDiagnosticsParams`
  --> src\lsp\protocol.rs:5:5
   |
 5 |     InitializeParams, InitializeResult, InitializedParams,
   |     ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^
 6 |     TextDocumentIdentifier, TextDocumentPositionParams, Position,
 7 |     CompletionParams, CompletionResponse, Hover, HoverParams,
   |                       ^^^^^^^^^^^^^^^^^^  ^^^^^
 8 |     DidOpenTextDocumentParams, DidChangeTextDocumentParams,
 9 |     DidSaveTextDocumentParams, DidCloseTextDocumentParams,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^
10 |     TextDocumentItem, VersionedTextDocumentIdentifier,
11 |     TextDocumentContentChangeEvent, PublishDiagnosticsParams,
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `Deserialize` and `Serialize`      
  --> src\lsp\protocol.rs:14:13
   |
14 | use serde::{Deserialize, Serialize};
   |             ^^^^^^^^^^^  ^^^^^^^^^

error[E0609]: no field `name` on type `Tool`                
  --> src\sdk\tools.rs:29:38
   |
29 |         let name = tool.definition().name.clone();
   |                                      ^^^^ unknown field
   |
help: one of the expressions' fields has a field of the same name
   |
29 |         let name = tool.definition().function.name.clone();
   |                                      +++++++++

For more information about this error, try `rustc --explain E0609`.
warning: `voidesk` (lib) generated 7 warnings               
error: could not compile `voidesk` (lib) due to 1 previous error; 7 warnings emitted
Terminate batch job (Y/N)? 
^C